--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@ionic-native/http": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
     "cordova-android": "~6.3.0",
     "cordova-plugin-advanced-http": "^1.8.1",
     "cordova-plugin-device": "^1.1.4",
@@ -32,6 +32,7 @@
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-sqlite-storage": "^2.1.3",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -51,7 +52,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
